@@ -1263,6 +1263,39 @@ class ETreeOnlyTestCase(HelperTestCase):
             [d, f],
             list(a.getiterator('{b}*')))
 
+    def test_getiterator_filter_element(self):
+        Element = self.etree.Element
+        Comment = self.etree.Comment
+        PI = self.etree.PI
+        SubElement = self.etree.SubElement
+
+        a = Element('a')
+        b = SubElement(a, 'b')
+        a.append(Comment("test"))
+        a.append(PI("pi", "content"))
+        c = SubElement(a, 'c')
+
+        self.assertEquals(
+            [a, b, c],
+            list(a.getiterator(Element)))
+
+    def test_getiterator_filter_all_comment_pi(self):
+        # ElementTree iterates over everything here
+        Element = self.etree.Element
+        Comment = self.etree.Comment
+        PI = self.etree.PI
+        SubElement = self.etree.SubElement
+
+        a = Element('a')
+        b = SubElement(a, 'b')
+        a.append(Comment("test"))
+        a.append(PI("pi", "content"))
+        c = SubElement(a, 'c')
+
+        self.assertEquals(
+            [a, b, c],
+            list(a.getiterator('*')))
+
     def test_findall_ns(self):
         XML = self.etree.XML
         root = XML('<a xmlns:x="X" xmlns:y="Y"><x:b><c/></x:b><b/><c><x:b/><b/></c><b/></a>')
